show current token for all the services along with all the users token