@@ -1,7 +1,10 @@
 package com.codewithprojects.springsecurity.services.Impl;
 
+import com.codewithprojects.springsecurity.dto.TokenResponseDto;
 import com.codewithprojects.springsecurity.entities.Token;
+import com.codewithprojects.springsecurity.entities.TokenStatus;
 import com.codewithprojects.springsecurity.entities.User;
+import com.codewithprojects.springsecurity.repository.TokenRepository;
 import com.codewithprojects.springsecurity.repository.UserRepository;
 import com.codewithprojects.springsecurity.services.UserService;
 import lombok.RequiredArgsConstructor;
@@ -11,6 +14,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * Implementation of the UserService interface for managing user-related operations.
@@ -20,7 +24,7 @@ import java.util.Optional;
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-    private final TokenServiceImpl tokenServiceImpl;
+    private final TokenRepository tokenRepository;
 
     /**
      * Loads user details by username (email) for authentication.
@@ -58,14 +62,29 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public List<Token> getRequestedToken(Integer user_id) {
-        List<Token> tokens = tokenServiceImpl.getAllRequestedToken();
-        System.out.println(tokens);
+    public TokenResponseDto getRequestedToken(Integer user_id) {
+        // Fetch all tokens where the user is associated
+        List<Token> userTokens = tokenRepository.findByUserId(user_id);
 
-        // Filter tokens for the given user ID
-        return tokens.stream()
-                //.filter(token -> token.getUserId().getId().equals(user_id))
-                .filter(token -> token.getUser().getId().equals(user_id))
-                .toList();
+        List<Token> activeTokens =tokenRepository.findAll().stream()
+                .filter(token -> token.getStatus().equals(TokenStatus.ACTIVE))
+                .collect(Collectors.toList());
+        // Log active token IDs
+        if (!activeTokens.isEmpty()) {
+            activeTokens.forEach(token -> System.out.println("Active Token ID: " + token.getId()));
+        } else {
+            System.out.println("No active tokens found for the user.");
+        }
+
+        // Return both lists in the DTO
+        return new TokenResponseDto(userTokens, activeTokens);
     }
+
+    @Override
+    public List<Token> tokenHistory(Integer id) {
+        return tokenRepository.findByUserId(id);
+
+    }
+
+
 }
